--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="container mx-auto px-6 py-12">
 			<div class="text-center mb-16">
 				<h1 class="text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 mb-6">Web Navigation</h1>
-				<p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">Discover our collection of interactive web experiences featuring stunning animations, precise countdowns, and captivating visual effects.</p>
+				<p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">Khám phá bộ sưu tập trải nghiệm web tương tác của chúng tôi với các hiệu ứng hoạt ảnh tuyệt đẹp, đếm ngược chính xác và hiệu ứng hình ảnh hấp dẫn.</p>
 			</div>
 
 			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10" id="card-container"></div>
@@ -100,25 +100,32 @@
 			// Enhanced cards with Font Awesome icons
 			const cards = [
 				{
-					title: 'Countdown to 2025',
-					description: 'Đếm còn bao nhiêu ngày đến tết.',
+					title: 'Đếm ngược đến 2025',
+					description: 'Đếm ngược thời gian đến Tết Ất Mão 2025 với hiệu ứng động đẹp mắt',
 					link: 'tet.html',
 					icon: 'fas fa-hourglass-half',
 					colors: ['#FF6B6B', '#FF8E8E'],
 				},
 				{
-					title: 'Photo Animation',
-					description: 'Bring your photos to life with stunning transition effects and interactive animations.',
+					title: 'Hiệu ứng ảnh',
+					description: 'Mang lại sức sống cho ảnh của bạn với các hiệu ứng chuyển đổi và hoạt ảnh tương tác',
 					link: 'parody.html',
 					icon: 'fas fa-camera-retro',
 					colors: ['#4E95F3', '#73B1F7'],
 				},
 				{
-					title: 'Meteors Animation',
-					description: 'Watch mesmerizing meteor showers with realistic particle effects and dynamic lighting.',
+					title: 'Hiệu ứng sao băng',
+					description: 'Chiêm ngưỡng những cơn mưa sao băng với hiệu ứng hạt chân thực và ánh sáng động',
 					link: 'meteors.html',
 					icon: 'fas fa-meteor',
 					colors: ['#9C6EF3', '#B490F5'],
+				},
+				{
+					title: 'Raw Git',
+					description: 'Chuyển đổi liên kết GitHub sang jsDelivr CDN với giao diện thân thiện',
+					link: 'rawgit.html',
+					icon: 'fab fa-github',
+					colors: ['#2ECC71', '#27AE60'],
 				},
 			];
 
