--- a/rawgit.html
+++ b/rawgit.html
@@ -1,263 +1,333 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Github to JSDelivr</title>
-		<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
-		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css" />
-		<link rel="shortcut icon" href="//www.google.com/s2/favicons?domain=https://www.jsdelivr.com" />
-		<style type="text/css">
-			.intro {
-				margin: 0.5em 0;
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<style>
+			body {
+				background: #f8f9fa;
+				color: #212529;
+				min-height: 100vh;
+				padding: 2rem 0;
 			}
 
-			.jsDelivr,
-			.ex,
-			.main {
-				margin: 1em 0;
+			.container {
+				max-width: 900px;
 			}
 
-			.jsDelivr > img {
-				margin: 0 0 10px;
+			.card {
+				background: white;
+				border: none;
+				border-radius: 15px;
+				box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+				padding: 2rem;
+				margin-bottom: 2rem;
 			}
 
-			.git .head {
-				display: flex;
-				align-items: center;
-				margin: 0 0 0.5em;
+			.logo {
+				width: 40px;
+				height: 40px;
+				object-fit: contain;
 			}
 
-			.git .head span {
-				font-size: 1.3em;
+			.title {
+				font-size: 2rem;
+				font-weight: 600;
+				margin: 1rem 0;
+				color: #2d3436;
+			}
+
+			.description {
+				color: #636e72;
+				font-size: 1.1rem;
+				margin-bottom: 2rem;
+			}
+
+			.input-group {
+				margin-bottom: 1.5rem;
+			}
+
+			.form-control {
+				border-radius: 8px;
+				padding: 0.8rem 1rem;
+				font-size: 1rem;
+				border: 2px solid #e9ecef;
+				transition: all 0.3s ease;
+			}
+
+			.form-control:focus {
+				border-color: #74b9ff;
+				box-shadow: 0 0 0 0.2rem rgba(116, 185, 255, 0.25);
+			}
+
+			.form-control.invalid {
+				border-color: #ff7675;
+				box-shadow: 0 0 0 0.2rem rgba(255, 118, 117, 0.25);
+			}
+
+			.btn {
+				padding: 0.5rem 1.5rem;
+				border-radius: 8px;
 				font-weight: 500;
-				display: inline-block;
-				margin: 0 0 0 6px;
+				margin: 0 0.3rem;
 			}
 
-			.ex ul li {
+			.btn-copy {
+				background: #00b894;
+				color: white;
+			}
+
+			.btn-copy:hover {
+				background: #00a187;
+				color: white;
+			}
+
+			.btn-test {
+				background: #0984e3;
+				color: white;
+			}
+
+			.btn-test:hover {
+				background: #0876cc;
+				color: white;
+			}
+
+			.btn-reset {
+				background: #d63031;
+				color: white;
+			}
+
+			.btn-reset:hover {
+				background: #c12e2e;
+				color: white;
+			}
+
+			.example-list {
+				background: #f1f2f6;
+				padding: 1.5rem;
+				border-radius: 10px;
+				margin-top: 2rem;
+			}
+
+			.example-list h5 {
+				color: #2d3436;
+				margin-bottom: 1rem;
+			}
+
+			.example-list ul {
+				margin: 0;
+				padding-left: 1.2rem;
+			}
+
+			.example-list li {
+				margin-bottom: 0.5rem;
+				color: #636e72;
+			}
+
+			.example-list b {
+				color: #2d3436;
 				word-break: break-all;
 			}
 
-			.gitlink.invalid {
-				border-color: #ffaf86;
-				box-shadow: 0 0 0 0.2rem rgba(234, 121, 55, 0.25);
-			}
-
 			.footer {
-				padding: 1em 0;
-				border-top: 1px solid #eaeaea;
-			}
-
-			.embed-label {
-				display: inline-block;
-				margin: 10px 0;
+				text-align: center;
+				margin-top: 2rem;
+				padding-top: 1rem;
+				border-top: 1px solid #eee;
+				color: #b2bec3;
 			}
 		</style>
-		<script async="async" src="/assests/js/analytics.js?id=UA-113310556-1"></script>
-		<script type="text/javascript">
-			window.dataLayer = window.dataLayer || [];
-
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-			gtag('config', 'UA-113310556-1');
-		</script>
 	</head>
 
 	<body>
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-xl-12 col-sm-12 col-md-12">
-					<div class="head">
-						<h1 class="text-center intro">Migrating from GitHub to jsDelivr</h1>
-						<p class="text-center">
-							<legend>jsDelivr is a free, fast, and reliable Open Source CDN for npm and GitHub. Most GitHub links can be easily converted to jsDelivr links.</legend>
-						</p>
+			<div class="card">
+				<h1 class="title text-center">Github to JSDelivr</h1>
+				<p class="description text-center">Chuyển đổi link Github sang JSDelivr CDN một cách nhanh chóng và dễ dàng</p>
+
+				<div class="input-section">
+					<div class="input-group">
+						<input type="text" class="form-control" id="g" placeholder="Nhập Github URL" />
 					</div>
-					<div class="main">
-						<div class="git">
-							<div class="head"><img src="//i.imgur.com/jbCwXbB.png" width="25" height="25" /> <span>Github</span></div>
-							<div class="form-group row">
-								<div class="col-lg-12 col-xl-12 col-sm-12 col-md-12">
-									<input type="text" class="form-control gitlink" id="g" placeholder="Github file URL" />
-								</div>
-							</div>
+
+					<div class="output-group">
+						<div class="input-group">
+							<input type="text" class="form-control" id="o" placeholder="Link JSDelivr (hash dài)" readonly />
+							<button class="btn btn-copy" id="c1">Copy</button>
+							<button class="btn btn-test" id="t1">Test</button>
 						</div>
-						<div class="jsDelivr">
-							<img src="//i.imgur.com/drtug7D.png" />
-							<div class="form-group row">
-								<div class="col-lg-12 col-xl-12 col-sm-12 col-md-12">
-									<div class="row">
-										<div class="col-lg-10 col-xl-10 col-sm-10 col-md-10">
-											<input type="text" class="form-control" id="o" placeholder="Direct link with lastest commit (long hash)" readonly="" />
-										</div>
-										<div class="col-lg-2 col-xl-2 col-sm-2 col-md-2">
-											<button class="btn btn-success" id="c1">COPY</button>
-											<button class="btn btn-primary" id="t1">TEST</button>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-lg-10 col-xl-10 col-sm-10 col-md-10">
-											<input type="text" class="form-control" id="r" placeholder="Direct link with lastest commit (short hash)" readonly="" />
-										</div>
-										<div class="col-lg-2 col-xl-2 col-sm-2 col-md-2">
-											<button class="btn btn-success" id="c2">COPY</button>
-											<button class="btn btn-primary" id="t2">TEST</button>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-lg-10 col-xl-10 col-sm-10 col-md-10">
-											<input type="text" class="form-control" id="m" placeholder="Direct link without lastest commit" readonly="" />
-										</div>
-										<div class="col-lg-2 col-xl-2 col-sm-2 col-md-2">
-											<button class="btn btn-success" id="c3">COPY</button>
-											<button class="btn btn-primary" id="t3">TEST</button>
-										</div>
-									</div>
-								</div>
-							</div>
+
+						<div class="input-group">
+							<input type="text" class="form-control" id="r" placeholder="Link JSDelivr (hash ngắn)" readonly />
+							<button class="btn btn-copy" id="c2">Copy</button>
+							<button class="btn btn-test" id="t2">Test</button>
 						</div>
-						<div class="embed">
-							<span class="embed-label"><strong>Embedded code</strong></span>
-							<div class="form-group row">
-								<div class="col-lg-12 col-xl-12 col-sm-12 col-md-12">
-									<div class="row">
-										<div class="col-lg-10 col-xl-10 col-sm-10 col-md-10">
-											<input type="text" class="form-control" id="n" placeholder="Embedded code with lastest commit (long hash)" readonly="" />
-										</div>
-										<div class="col-lg-2 col-xl-2 col-sm-2 col-md-2">
-											<button class="btn btn-success" id="c4">COPY</button>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-lg-10 col-xl-10 col-sm-10 col-md-10">
-											<input type="text" class="form-control" id="t" placeholder="Embedded code with lastest commit (short hash)" readonly="" />
-										</div>
-										<div class="col-lg-2 col-xl-2 col-sm-2 col-md-2">
-											<button class="btn btn-success" id="c5">COPY</button>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-lg-10 col-xl-10 col-sm-10 col-md-10">
-											<input type="text" class="form-control" id="p" placeholder="Embedded code without lastest commit" readonly="" />
-										</div>
-										<div class="col-lg-2 col-xl-2 col-sm-2 col-md-2">
-											<button class="btn btn-success" id="c6">COPY</button>
-										</div>
-									</div>
-								</div>
-							</div>
+
+						<div class="input-group">
+							<input type="text" class="form-control" id="m" placeholder="Link JSDelivr (không hash)" readonly />
+							<button class="btn btn-copy" id="c3">Copy</button>
+							<button class="btn btn-test" id="t3">Test</button>
 						</div>
 					</div>
-					<div class="btngroup">
-						<button class="btn btn-danger" id="x">RESET</button>
+
+					<div class="embed-section">
+						<h5 class="mb-3">Mã nhúng</h5>
+						<div class="input-group">
+							<input type="text" class="form-control" id="n" placeholder="Mã nhúng (hash dài)" readonly />
+							<button class="btn btn-copy" id="c4">Copy</button>
+						</div>
+
+						<div class="input-group">
+							<input type="text" class="form-control" id="t" placeholder="Mã nhúng (hash ngắn)" readonly />
+							<button class="btn btn-copy" id="c5">Copy</button>
+						</div>
+
+						<div class="input-group">
+							<input type="text" class="form-control" id="p" placeholder="Mã nhúng (không hash)" readonly />
+							<button class="btn btn-copy" id="c6">Copy</button>
+						</div>
 					</div>
-					<div class="ex">
-						<h5>Valid URL</h5>
-						<ul>
-							<li>Github file URL: <b>https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap.min.css</b></li>
-							<li>Github file URL: <b>https://github.com/twbs/bootstrap/raw/v4-dev/dist/css/bootstrap.min.css</b></li>
-							<li>Github file URL: <b>https://github.com/twbs/bootstrap/blame/v4-dev/dist/css/bootstrap.min.css</b></li>
-							<li>Github raw file URL: <b>https://raw.githubusercontent.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.min.css</b></li>
-						</ul>
+
+					<div class="text-center mt-4">
+						<button class="btn btn-reset" id="x">Reset</button>
 					</div>
-					<div class="footer text-center">@ <span class="year"></span> by Hung1001</div>
 				</div>
 			</div>
+
+			<div class="example-list">
+				<h5>URL mẫu hợp lệ:</h5>
+				<ul>
+					<li>Github file URL: <b>https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap.min.css</b></li>
+					<li>Github raw URL: <b>https://raw.githubusercontent.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.min.css</b></li>
+				</ul>
+			</div>
+
+			<div class="footer">© <span class="year"></span> Original by Hung1001 - Remake by Yuusei</div>
 		</div>
-		<script type="text/javascript">
-			const giturl = /^https?:\/\/github\.com\/(.+?)\/(.+?)\/(?!releases\/)(?:(?:blob|raw|blame)\/)?(.+?)\/(.+)/i,
-				rawgit = /^https?:\/\/raw\.github(?:usercontent)?\.com\/(.+?)\/(.+?)\/(.+?)\/(.+)/i;
+
+		<script>
+			const giturl = /^https?:\/\/github\.com\/(.+?)\/(.+?)\/(?!releases\/)(?:(?:blob|raw|blame)\/)?(.+?)\/(.+)/i;
+			const rawgit = /^https?:\/\/raw\.github(?:usercontent)?\.com\/(.+?)\/(.+?)\/(?:refs\/heads\/)?(.+?)\/(.+)/i;
+
 			(function (doc) {
-				doc.getElementsByClassName('gitlink')[0].focus();
-				doc.getElementsByClassName('year')[0].innerHTML = new Date().getFullYear();
+				// Set year
+				doc.querySelector('.year').innerHTML = new Date().getFullYear();
 
-				var a = () => {
-					let t = doc.getElementsByClassName('gitlink')[0].value;
-					let y = t.match(giturl),
-						l = t.match(rawgit);
+				// Focus input on load
+				doc.getElementById('g').focus();
 
-					var n = (e, i) => {
-						doc.getElementsByClassName('gitlink')[0].classList.remove('invalid');
-						let n = `https://api.github.com/repos/${i[1]}/${i[2]}/commits/${i[3]}`;
-						fetch(n)
-							.then(r => r.json())
-							.then(i => {
-								let n = i.sha,
-									c = t.replace(e, `https://cdn.jsdelivr.net/gh/$1/$2@${n}/$4`),
-									d = t.replace(e, `https://cdn.jsdelivr.net/gh/$1/$2/$4`),
-									k = t.replace(e, `https://cdn.jsdelivr.net/gh/$1/$2@${n.substring(0, 7)}/$4`),
-									q = t.split('/').pop();
-								doc.getElementById('o').value = c;
-								doc.getElementById('m').value = d;
-								doc.getElementById('r').value = k;
-								if (q.indexOf('.js') != -1) {
-									doc.getElementById('n').value = `<script src="${c}" type="text/javascript"><\/script>`;
-									doc.getElementById('p').value = `<script src="${d}" type="text/javascript"><\/script>`;
-									doc.getElementById('t').value = `<script src="${k}" type="text/javascript"><\/script>`;
-								}
-								if (q.indexOf('.css') != -1) {
-									doc.getElementById('n').value = `<link href="${c}" rel="stylesheet" type="text/css"/>`;
-									doc.getElementById('p').value = `<link href="${d}" rel="stylesheet" type="text/css"/>`;
-									doc.getElementById('t').value = `<link href="${k}" rel="stylesheet" type="text/css"/>`;
-								}
-								if (q.indexOf('.png') != -1 || q.indexOf('.jpg') != -1 || q.indexOf('.gif') != -1 || q.indexOf('.svg') != -1 || q.indexOf('.jpeg') != -1) {
-									doc.getElementById('n').value = `<img src="${c}">`;
-									doc.getElementById('p').value = `<img src="${d}">`;
-									doc.getElementById('t').value = `<img src="${k}">`;
+				const processUrl = () => {
+					let inputUrl = doc.getElementById('g').value;
+					let githubMatch = inputUrl.match(giturl);
+					let rawMatch = inputUrl.match(rawgit);
+
+					const processMatch = (regex, matches) => {
+						doc.getElementById('g').classList.remove('invalid');
+
+						// Xử lý branch name khi có refs/heads
+						let branch = matches[3];
+						if (branch.includes('refs/heads/')) {
+							branch = branch.replace('refs/heads/', '');
+						}
+
+						let apiUrl = `https://api.github.com/repos/${matches[1]}/${matches[2]}/commits/${branch}`;
+
+						fetch(apiUrl)
+							.then(response => response.json())
+							.then(data => {
+								let fullHash = data.sha;
+								let shortHash = fullHash.substring(0, 7);
+								let fileName = matches[4];
+
+								// Generate URLs - loại bỏ refs/heads từ path
+								let path = matches[4];
+								let longHashUrl = `https://cdn.jsdelivr.net/gh/${matches[1]}/${matches[2]}@${fullHash}/${path}`;
+								let shortHashUrl = `https://cdn.jsdelivr.net/gh/${matches[1]}/${matches[2]}@${shortHash}/${path}`;
+								let noHashUrl = `https://cdn.jsdelivr.net/gh/${matches[1]}/${matches[2]}/${path}`;
+
+								// Set URLs
+								doc.getElementById('o').value = longHashUrl;
+								doc.getElementById('r').value = shortHashUrl;
+								doc.getElementById('m').value = noHashUrl;
+
+								// Generate embed codes
+								if (fileName.endsWith('.js')) {
+									doc.getElementById('n').value = `<script src="${longHashUrl}"><\/script>`;
+									doc.getElementById('t').value = `<script src="${shortHashUrl}"><\/script>`;
+									doc.getElementById('p').value = `<script src="${noHashUrl}"><\/script>`;
+								} else if (fileName.endsWith('.css')) {
+									doc.getElementById('n').value = `<link href="${longHashUrl}" rel="stylesheet">`;
+									doc.getElementById('t').value = `<link href="${shortHashUrl}" rel="stylesheet">`;
+									doc.getElementById('p').value = `<link href="${noHashUrl}" rel="stylesheet">`;
+								} else if (/\.(png|jpg|gif|svg|jpeg)$/i.test(fileName)) {
+									doc.getElementById('n').value = `<img src="${longHashUrl}">`;
+									doc.getElementById('t').value = `<img src="${shortHashUrl}">`;
+									doc.getElementById('p').value = `<img src="${noHashUrl}">`;
 								}
 							})
-							.catch(e => console.error(e));
+							.catch(error => {
+								console.error('Error:', error);
+								doc.getElementById('g').classList.add('invalid');
+							});
 					};
-					giturl.test(t) ? n(giturl, y) : rawgit.test(t) ? n(rawgit, l) : doc.getElementsByClassName('gitlink')[0].classList.add('invalid');
-				};
 
-				var b = id => {
-					doc.getElementById(id).value.length > 0 ? (doc.getElementById(id).select(), doc.execCommand('copy')) : alert('Nothing to copy !');
-				};
-
-				var c = id => {
-					doc.getElementById(id).value.length > 0 ? window.open(doc.getElementById(id).value) : alert('Nothing to test !');
-				};
-				doc.getElementById('x').addEventListener('click', () => {
-					doc.getElementById('g').focus();
-					let a = doc.querySelectorAll('#g,#o,#m,#n,#p,#t,#r');
-					for (let i = 0; i < a.length; i++) {
-						a[i].value = '';
+					if (githubMatch) {
+						processMatch(giturl, githubMatch);
+					} else if (rawMatch) {
+						processMatch(rawgit, rawMatch);
+					} else {
+						doc.getElementById('g').classList.add('invalid');
 					}
+				};
+
+				// Copy function
+				const copyToClipboard = id => {
+					const element = doc.getElementById(id);
+					if (element.value.length > 0) {
+						element.select();
+						doc.execCommand('copy');
+					} else {
+						alert('Nothing to copy!');
+					}
+				};
+
+				// Test function
+				const testUrl = id => {
+					const url = doc.getElementById(id).value;
+					if (url.length > 0) {
+						window.open(url);
+					} else {
+						alert('Nothing to test!');
+					}
+				};
+
+				// Reset function
+				doc.getElementById('x').addEventListener('click', () => {
+					const inputs = ['g', 'o', 'm', 'n', 'p', 't', 'r'];
+					inputs.forEach(id => (doc.getElementById(id).value = ''));
+					doc.getElementById('g').focus();
 				});
-				doc.getElementById('c1').addEventListener('click', () => {
-					b('o');
+
+				// Add event listeners
+				doc.getElementById('g').addEventListener('input', processUrl);
+
+				// Copy buttons
+				['c1', 'c2', 'c3', 'c4', 'c5', 'c6'].forEach((id, index) => {
+					doc.getElementById(id).addEventListener('click', () => {
+						const targetIds = ['o', 'r', 'm', 'n', 't', 'p'];
+						copyToClipboard(targetIds[index]);
+					});
 				});
-				doc.getElementById('c2').addEventListener('click', () => {
-					b('r');
+
+				// Test buttons
+				['t1', 't2', 't3'].forEach((id, index) => {
+					doc.getElementById(id).addEventListener('click', () => {
+						const targetIds = ['o', 'r', 'm'];
+						testUrl(targetIds[index]);
+					});
 				});
-				doc.getElementById('c3').addEventListener('click', () => {
-					b('m');
-				});
-				doc.getElementById('c4').addEventListener('click', () => {
-					b('n');
-				});
-				doc.getElementById('c5').addEventListener('click', () => {
-					b('t');
-				});
-				doc.getElementById('c6').addEventListener('click', () => {
-					b('p');
-				});
-				doc.getElementById('t1').addEventListener('click', () => {
-					c('o');
-				});
-				doc.getElementById('t2').addEventListener('click', () => {
-					c('r');
-				});
-				doc.getElementById('t3').addEventListener('click', () => {
-					c('m');
-				});
-				doc.getElementById('g').addEventListener('input', a);
 			})(document);
 		</script>
 	</body>
